# ocaml-uri-bazel

./: .bazelrc  .gitignore  WORKSPACE.bazel  flake.nix  test.bash
bzl/: deps.bzl  deps_setup.bzl  opam.bzl  services.bzl
config/: BUILD.bazel
etc/: BUILD.bazel
lib/: BUILD.bazel
lib_re/: BUILD.bazel
lib_sexp/: BUILD.bazel
lib_test/: BUILD.bazel
